[tool.poetry]
name = "cc201"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.scripts]
cc201 = "cc201.__main__:run"

[tool.poetry.dependencies]
python = "^3.6"
sly = "^0.4"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
jedi = "^0.17.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
